# vllm-mlx-siesta

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  pr-agent.yml
examples/: config.toml
launchd/: com.axiomantic.vllm-mlx-siesta.plist.tmpl  install.sh
src/vllm_mlx_siesta/: __init__.py  __main__.py  config.py  proxy.py  server.py  supervisor.py
tests/: conftest.py  test_proxy.py  test_supervisor.py
