[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllm-mlx-siesta"
version = "0.1.0"
description = "Idle-timeout reverse proxy for vllm-mlx on macOS Apple Silicon"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Axiomantic" }]
keywords = ["mlx", "vllm", "apple-silicon", "llm", "proxy", "launchagent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
vllm-mlx-siesta = "vllm_mlx_siesta.__main__:main"

[project.urls]
Repository = "https://github.com/axiomantic/vllm-mlx-siesta"
Issues = "https://github.com/axiomantic/vllm-mlx-siesta/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_mlx_siesta"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["vllm_mlx_siesta"]
